  19 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Add dev-libs/libxml2 dependency

  18 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  update dependencies, no embedded remains

  18 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Dependency cleanup

  11 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Explicit depend on otopi as it is used for setup

  11 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  No need postgres-server any more

  11 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Add EPYTHON to export best, something has changed?

  07 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> files/gentoo-setup.conf:
  remove default non-root as it is in product

  07 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  remove jaf as we removed it from engine

  06 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  add some more java dependencies, add config note

  04 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> files/ovirt-engine.init.d:
  sync init.d script

  04 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Use >=dev-python/python-exec-0.3 as it supports symlinks

  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +metadata.xml,
  files/ovirt-engine.init.d, ovirt-engine-9999.ebuild:
  fixups